--- a/bellaOrange.html
+++ b/bellaOrange.html
@@ -80,6 +80,9 @@
         <div class="copy">Copywright Bella Onojie.com</div>
         
     </div>
+    <div class="slogan">
+        Just type what's on your mind and we'll
+    </div>
 
 
 
