Ma deuxieme version

--- a/bellaOrange.html
+++ b/bellaOrange.html
@@ -35,7 +35,7 @@
             <div class="items-3">Download the bella onoje's food app now on</div>
         </div>
         <div class="bouton">
-            <div class="bouton-1">playstore</div>
+            <div class="bouton-1">Playstore</div>
             <div class="bouton-2">Appstore</div>
         </div>
 
@@ -83,21 +83,6 @@
     <div class="slogan">
         Just type what's on your mind and we'll
     </div>
-
-
-
-
-
     </div>
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
